Sat Jun 23 07:54:30 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/various:
   - Use the ser_set_* and ser_get_* functions to handle the modem
     control lines, so that we don't have to mess with ioctl() calls
     to do that.
 * drivers/megatec.h, drivers/powerpanel.c, drivers/safenet.c:
   - Additions to patch 975 that did the above already.

Sat Jun 23 03:29:29 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: unplugging the UPS generates more error
   codes than I was handling before. Tested with OMNIVS1000 on Ubuntu.

Sat Jun 23 03:02:27 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: don't loop when reconnecting to the UPS.
   (similar to changes made to usbhid-ups.c)

Fri Jun 22 07:07:25 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/usbhid-ups.c: fix the previous improvement in the handling
   and reporting of the communication lost status. 

Thu Jun 21 18:54:57 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * docs/new-drivers.txt, drivers/serial.[ch]:
   - Created functions to manipulate the modem control lines, so that
     we don't have to mess with ioctl() calls to do that.
   - Add a function to flush both the in- and output buffers.
 * drivers/powerpanel.[ch], drivers/safenet.c:
   - Put the above mentioned new functions to use.
 * drivers/megatec.[ch], drivers/megatec_usb.c:
   - Use the new modem control line functions in megatec.c and provide
     stubs in megatec_usb.c.

Thu Jun 21 07:41:09 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/main-hal.c: fixe a double setting of device_path

Thu Jun 21 07:07:25 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/usbhid-ups.c: improve the handling and reporting of the
   communication lost status. Previously, these were not reported
   anymore.

Web Jun 20 22:14:43 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c, drivers/megatec_usb.c: reverted changes to