@@ -95,22 +95,22 @@
 "Compaq"	"R3000 XR"	""	"bcmxcp"
 "Compaq"	"R5500 XR"	""	"bcmxcp"
 
-"Cyber Power Systems"	"320AVR"	""	"cyberpower"
-"Cyber Power Systems"	"500AVR"	""	"cyberpower"
-"Cyber Power Systems"	"650AVR"	""	"cyberpower"
-"Cyber Power Systems"	"700AVR"	""	"cyberpower"
-"Cyber Power Systems"	"800AVR"	""	"cyberpower"
-"Cyber Power Systems"	"850AVR"	""	"cyberpower"
-"Cyber Power Systems"	"900AVR"	""	"cyberpower"
-"Cyber Power Systems"	"1250AVR"	""	"cyberpower"
-"Cyber Power Systems"	"1500AVR"	""	"cyberpower"
+"Cyber Power Systems"	"320AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"500AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"650AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"700AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"800AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"850AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"900AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"1250AVR"	""	"powerpanel or cyberpower"
+"Cyber Power Systems"	"1500AVR"	""	"powerpanel or cyberpower"
 "Cyber Power Systems"	"Power99"	""	"genericups upstype=7"
 "Cyber Power Systems"	"550SL"	""	"genericups upstype=7"
-"Cyber Power Systems"	"725SL"	""	"genericups upstype=22"
-"Cyber Power Systems"	"CPS825VA"	""	"powerpanel or cpsups (experimental)"
-"Cyber Power Systems"	"1100AVR"	""	"powerpanel or cpsups (experimental)"
-"Cyber Power Systems"	"1200AVR"	""	"powerpanel or cpsups (experimental)"
-"Cyber Power Systems"	"1500AVR-HO"	""	"powerpanel or cpsups (experimental)"
+"Cyber Power Systems"	"725SL"	""	"genericups upstype=7"
+"Cyber Power Systems"	"CPS825VA"	""	"powerpanel"
+"Cyber Power Systems"	"1100AVR"	""	"powerpanel"
+"Cyber Power Systems"	"1200AVR"	""	"powerpanel"
+"Cyber Power Systems"	"1500AVR-HO"	""	"powerpanel"
 "Cyber Power Systems"	"PR2200"	""	"powerpanel"
 "Cyber Power Systems"	"685AVR"	"USB"	"usbhid-ups"
 "Cyber Power Systems"	"800AVR"	"USB"	"usbhid-ups"
@@ -331,10 +331,10 @@
 "MGE UPS SYSTEMS"	"Pulsar (SNMP)"		"SNMP card (ref 66045)"	"snmp-ups (experimental)"
 "MGE UPS SYSTEMS"	"UM-Link (SNMP)"		"Not a UPS (ref 66850)"	"snmp-ups (experimental)"
 
-"MicroDowell"	"B.Box BP  500"	""	"powerpanel or cpsups"
-"MicroDowell"	"B.Box BP  750"	""	"powerpanel or cpsups"
-"MicroDowell"	"B.Box BP 1000"	""	"powerpanel or cpsups"
-"MicroDowell"	"B.Box BP 1500"	""	"powerpanel or cpsups"
+"MicroDowell"	"B.Box BP  500"	""	"powerpanel"
+"MicroDowell"	"B.Box BP  750"	""	"powerpanel"
+"MicroDowell"	"B.Box BP 1000"	""	"powerpanel"
+"MicroDowell"	"B.Box BP 1500"	""	"powerpanel"
 
 "Microsol"	"Solis 1.0"	"1000VA"	"solis"
 "Microsol"	"Solis 1.5"	"1500VA"	"solis"
@@ -356,6 +356,7 @@
 
 "Nitram"	"Elite 500"	""	"genericups upstype=8"
 "Nitram"	"Elite 2002"	""	"genericups upstype=16"
+"Nitram"	"Elite 2005"	""	"powerpanel or nitram"
 
 "Oneac" "EG/ON Series"	"advanced interface"	"oneac"
 
